# killeengeo

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: index.md
src/docs/: index.md
src/killeengeo/: __init__.py  core.py  hyperplane.py  random.py  ray.py  segment.py  utils.py
tests/: test_frame.py
